<?xml version="1.0"?>
<package format="2">
  <name>web_image_streamer</name>
  <version>0.0.0</version>
  <description>The web_image_streamer package</description>

  <maintainer email="shop@rt-net.jp">RT Corp.</maintainer>
  <author email="daisuke.sato@rt-net.jp">Daisuke Sato</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <export>

  </export>
</package>
