<?xml version="1.0"?>
<package format="2">
  <name>web_image_streamer</name>
  <version>0.0.0</version>
  <description>The web_image_streamer package</description>

  <maintainer email="shop@rt-net.jp">RT Corp.</maintainer>
  <author email="daisuke.sato@rt-net.jp">Daisuke Sato</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cv_camera</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>raspimouse_ros_2</exec_depend>

  <export>

  </export>
</package>
